src/components/Hero.css
.hero {
    position: relative;
    min-height: 700px;
    display: flex;
    align-items: center;
    padding: 100px;
    background-color: var(--bg-dark);
    overflow: hidden;

}

.hero-content {
    display: flex;
    flex-direction: column;
    gap: 24px;
    width: 100%;
    max-width: 100%;
    z-index: 1;
}

.hero-title {
    display: flex;
    flex-direction: column;
    white-space: nowrap;
    font-size: 60px;
    font-weight: 900;
    line-height: 1.2;
    margin-bottom: 15px;

}

.white {
    color: var(--text-light);
}

.gold {
    color: var(--primary);
}

.hero-subtitle {
    font-size: 16px;
    color: var(--text-light);
    opacity: 0.75;
    max-width: 520px;
    line-height: 1.6;
    white-space: nowrap;

}

.hero-btn {
    background-color: transparent;
    color: var(--primary);
    border: 2px solid var(--primary);
    padding: 14px 36px;
    border-radius: 6px;
    font-size: 16px;
    font-weight: 700;
    cursor: pointer;
    width: fit-content;
    transition: all 0.3s;
    margin-top: 5%;
}

.hero-btn:hover {
    background-color: var(--primary);
    color: var(--bg-dark);
}

.hero-circle {
    position: absolute;
    right: -190px;
    top: 50%;
    transform: translateY(-50%);
    width: 650px;
    height: 650px;
    border-radius: 50%;
    background-color: var(--primary);
    opacity: 0.05;
}

.hero-image-wrapper {
    position: relative;
    width: 420px;
    height: 420px;
    flex-shrink: 0;
}

.hero-image {
    width: 420px;
    height: 420px;
    border-radius: 50%;
    object-fit: cover;
    border: 4px solid var(--primary);
    position: relative;
    z-index: 2;
    object-position: center top;
    transform: scale(1.1);
}

.hero-ring {
    position: absolute;
    border-radius: 50%;
    border: 2px solid var(--primary);
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    animation: pulse 2s ease-out infinite;
}

.ring1 {
    width: 460px;
    height: 460px;
    opacity: 0.4;
}

.ring2 {
    width: 520px;
    height: 520px;
    opacity: 0.2;
    animation-delay: 0.5s;
}

@keyframes pulse {
    0% {
        transform: translate(-50%, -50%) scale(0.95);
        opacity: 0.4;
    }

    50% {
        transform: translate(-50%, -50%) scale(1.05);
        opacity: 0.2;
    }

    100% {
        transform: translate(-50%, -50%) scale(0.95);
        opacity: 0.4;
    }
}

.hero-image-wrapper {
    margin-left: auto;
    margin-top: -350px;
    margin-right: -100px;
}

@media (max-width: 768px) {
    .hero {
        padding: 60px 24px;
        overflow: hidden;
    }

    .hero-image-wrapper {
        display: none;
    }

    .hero-title {
        font-size: 36px;
    }

    .hero-subtitle {
        font-size: 14px;
    }
}

